change some code

--- a/index.html
+++ b/index.html
@@ -35,22 +35,24 @@
 
             <nav class="menu-1">
                 <ul>
-                    <li><a href="#"><i class="fas fa-home"></i><span class="street">Home</span></a></li>
-                    <li><a href="#"><i class="fab fa-font-awesome-flag"></i><span class="street">pages</span><span class="rate">9+</span></a></li>
-                    <li><a href="#"><i class="fab fa-youtube-square"></i><span class="street">Watch</span><span class="rate">9+</span></a></li>
-                    <li><a href="#"><i class="fas fa-hotel"></i><span class="street">Marketplace</span></a></li>
-                    <li><a href="#"><i class="fas fa-users"></i><span class="street">Groups</span></a></li>
+                    <li><a href="https://www.facebook.com/"><i class="fas fa-home"></i><span class="street">Home</span></a></li>
+                    <li><a href="https://www.facebook.com/pages/?category=your_pages&ref=bookmarks"><i class="fab fa-font-awesome-flag"></i><span class="street">pages</span><span class="rate">9+</span></a></li>
+                    <li><a href="https://www.facebook.com/watch/?ref=tab"><i class="fab fa-youtube-square"></i><span class="street">Watch</span><span class="rate">9+</span></a></li>
+                    <li><a href="https://www.facebook.com/marketplace/?ref=app_tab"><i class="fas fa-hotel"></i><span class="street">Marketplace</span></a></li>
+                    <li><a href="https://www.facebook.com/groups/feed/"><span class="shihab"><i class="fas fa-users"></i></span><span class="street">Groups</span></a></li>
                 </ul>
             </nav>
 
             <div class="menu-area">
                 <div class="shakil">
-                    <img src="assets/images/header/shakil.png" alt="shakil img">
-                    <p>Shākīl</p>
+                    <a href="https://www.facebook.com/profile.php?id=100008603921465">
+                        <img src="assets/images/header/shakil.png" alt="shakil img">
+                        <p>Shākīl</p>
+                    </a>
                 </div>
                 <nav class="menu-2">
                     <ul>
-                        <li><a href="#"><i class="fas fa-th"></i><span class="street">Menu</span></a></li>
+                        <li><a href="https://www.facebook.com/menu/"><i class="fas fa-th"></i><span class="street">Menu</span></a></li>
                         <li><a href="#"><i class="fab fa-facebook-messenger"></i><span class="street">Messenger</span></a></li>
                         <li><a href="#"><i class="fas fa-bell"></i><span class="street">Notifaction</span></a></li>
                         <li><a href="#"><i class="fas fa-caret-down"></i><span class="street">Account</span></a></li>
