--- a/index.html
+++ b/index.html
@@ -69,5 +69,18 @@
     </header>
     <!--End Header area -->
 
+     <!--Start Banner area -->
+        <section class="banner-area">
+            <div class="container">
+                <div class="banner">
+                    <div class="camera">
+                        <i class="fas fa-camera"></i>
+                        <p>Edit Cover Photo</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+    <!--End Banner area -->
+
 </body>
 </html>
